# rename-import-dll

./: .gitignore  LICENSE  README.md  rid.c
rid/: CMakeLists.txt  rid.c  rid.sln  rid.vcxproj  rid.vcxproj.filters
